# cmaketest

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
lib/: libfmt.so.7
src/: main.cpp
src/adder/: CMakeLists.txt  adder.cpp
